fixed backgrounds on mobile

--- a/styles.css
+++ b/styles.css
@@ -800,6 +800,25 @@ main {
     display: block;
   }
 
+  .parallax-banner {
+    display: block;
+    background: url("images/hero-background.jpeg");
+    background-size: auto;
+    background-attachment: none;
+  }
+
+  .parallax-section,
+  .parallax-section ~ .parallax-section {
+    background-size: auto;
+    background-attachment: none;
+  }
+
+  .parallax-section ~ .parallax-section {
+    background-size: auto;
+    background-attachment: scroll;
+    background-repeat: none;
+  }
+
   .hero-container .static-text {
     font-size: 40px;
   }
@@ -837,11 +856,11 @@ main {
   #purpose-section .vert-card.fade-in:nth-child(1) {
     transition-delay: 0s;
   }
-  
+
   #purpose-section .vert-card.fade-in:nth-child(2) {
     transition-delay: 0s;
   }
-  
+
   #purpose-section .vert-card.fade-in:nth-child(3) {
     transition-delay: 0s;
   }
@@ -934,19 +953,21 @@ main {
 }
 
 @media screen and (max-width: 423px) {
+  .parallax-banner,
+  .parallax-section {
+  }
   #purpose-section h1 {
     font-size: 1.6rem;
   }
   #purpose-section .vert-card.fade-in:nth-child(1) {
     transition-delay: 0s;
   }
-  
+
   #purpose-section .vert-card.fade-in:nth-child(2) {
     transition-delay: 0s;
   }
-  
+
   #purpose-section .vert-card.fade-in:nth-child(3) {
     transition-delay: 0s;
   }
-
 }
